Auto tool creation

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,11 @@
-SUBDIRS = src/hashtable src/linkedlist
+#SUBDIRS = src 
+
+# according to automake standard, source code should put into src/ folder 
+# if you need to put c file in root folder you need the following
+AUTOMAKE_OPTIONS = subdir-objects
+
+ACLOCAL_AMFLAGS = -I m4
+
 
 # Ref: https://opensource.com/article/19/7/introduction-gnu-autotools
 #clean-local:
