--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,6 @@ m4/lt~obsolete.m4
 # can automatically generate from config.status script
 # (which is called by configure script))
 Makefile
+configure~
+.vscode/tasks.json
+src/main
